# NotStudio

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  speech.py  timeline.py  utils.py  video.py
.githooks/: pre-commit
docs/: CAPTIONS.md
not-studio/: README.md
not-studio/api/: .env.example  README.md  pyproject.toml
not-studio/api/not_studio/: __init__.py  album_export.py  config.py  constants.py  db.py  deps.py  dev.py  engine_bridge.py  gpu_smoke.py  main.py  models.py  preflight.py  prompt_generation.py  schemas.py  video_export.py
not-studio/api/not_studio/audio/: __init__.py  dsp.py
not-studio/api/not_studio/backends/: __init__.py  ace_step.py  planner.py  registry.py  runpod_stable_audio.py  stable_audio.py
not-studio/api/not_studio/backends/images/: __init__.py  flux2_klein.py
not-studio/api/not_studio/routers/: __init__.py  generation.py  history.py  jobs.py  studio.py
not-studio/api/not_studio/services/: __init__.py  images.py  taste.py
not-studio/api/not_studio/tasks/: __init__.py  artwork.py  events.py  jobs.py  planning.py  processes.py  registry.py  submit.py
not-studio/api/tests/: conftest.py  test_api.py  test_dev.py  test_dsp.py  test_generation.py  test_processes.py  test_studio.py  test_video_export.py
not-studio/runpod/: Dockerfile  README.md  handler.py  requirements.txt
not-studio/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
not-studio/ui/src/: App.tsx  index.css  library.ts  main.tsx
not-studio/ui/src/api/: client.ts  hooks.ts
not-studio/ui/src/components/: icons.tsx  ui.tsx
not-studio/ui/src/pages/: Album.tsx  Generate.tsx  Library.tsx  Mix.tsx
radio-dashboard/: .gitignore  README.md  docker-compose.yml
radio-dashboard/agent/: README.md  radio_agent.py  system_prompt.md  tools.anthropic.json  tools.gemini.json  tools.openai.json
radio-dashboard/api/: .env.example  README.md  pyproject.toml
radio-dashboard/api/radio_dashboard/: __init__.py  buffer.py  config.py  constants.py  db.py  deps.py  dev.py  engine_bridge.py  main.py  models.py  schemas.py
radio-dashboard/api/radio_dashboard/agent/: __init__.py  executor.py  prompts.py  tools.py
radio-dashboard/api/radio_dashboard/audio/: __init__.py  dsp.py  orchestrator.py
radio-dashboard/api/radio_dashboard/backends/: __init__.py  base.py  kokoro.py  mock.py  registry.py  stable_audio.py
radio-dashboard/api/radio_dashboard/routers/: __init__.py  agent.py  backends.py  history.py  jobs.py  programs.py  schedules.py  streams.py  studio.py
radio-dashboard/api/radio_dashboard/streaming/: __init__.py  ffmpeg.py  playout.py
radio-dashboard/api/radio_dashboard/tasks/: __init__.py  jobs.py  queue.py  scheduler.py  worker.py
radio-dashboard/api/tests/: conftest.py  test_agent.py  test_api.py  test_orchestrator.py  test_studio.py
radio-dashboard/ui/: index.html  package-lock.json  package.json  vite.config.ts
radio-dashboard/ui/src/: App.tsx  index.css
radio-dashboard/ui/src/api/: client.ts  hooks.ts
radio-dashboard/ui/src/pages/: Backends.tsx  Dashboard.tsx  Generate.tsx  History.tsx  Jobs.tsx  Library.tsx  Programs.tsx  Schedules.tsx  Streams.tsx
scripts/: cross.py  main.py  utils.py  video.py
tests/: test_timeline.py
