[project]
name = "not-studio-engine"
version = "0.1.0"
description = "ACE-Step music generation utilities for Not Studio."
readme = "not-studio/README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mutagen>=1.48.1",
    "pyloudnorm>=0.2.0",
    "soundfile>=0.13.1",
    "ace-step",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.uv.sources]
ace-step = { git = "https://github.com/ace-step/ACE-Step-1.5.git" }
