[project]
name = "not-studio-api"
version = "0.1.0"
description = "API for Not Studio: album generation, prompt ideation, review, and mix rendering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "pydantic-settings>=2.4",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "boto3>=1.35",
    "stable-audio-3",
]

[tool.uv.sources]
stable-audio-3 = { path = "../../stable-audio-3" }

[project.scripts]
# `uv run dev` — API + Vite UI, one command.
dev = "not_studio.dev:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["not_studio"]
