[project]
name = "not-studio-api"
version = "0.1.0"
description = "API for Not Studio: ACE-Step album generation, review, and album export."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "pydantic-settings>=2.4",
    "numpy>=1.26",
    "soundfile>=0.12",
    "mutagen>=1.47",
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.9",
    "python-ffmpeg>=2.0.12,<3",
    "pillow>=11.0",
    "psutil>=6.0",
    "ace-step",
]

[tool.uv.sources]
ace-step = { git = "https://github.com/ace-step/ACE-Step-1.5.git" }

[project.scripts]
# `uv run dev` — API + Vite UI, one command.
dev = "not_studio.dev:main"
# `uv run prod` — shorthand for `uv run dev --production`.
prod = "not_studio.dev:prod"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["not_studio"]
