[project]
name = "radio-dashboard-api"
version = "0.1.0"
description = "Control-panel API for Neural Radio: scheduling, backends, orchestration, buffered streaming."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "arq>=0.26",
    "pydantic-settings>=2.4",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Only needed if you want the real backends imported in-process instead of via
# the parent project's CLI. The mock backend needs none of this.
real = [
    "torch>=2.2",
    "torchaudio>=2.2",
]
# The reference LLM radio agent (../agent/radio_agent.py) uses the Google Gen AI SDK.
agent = [
    "google-genai>=1.0",
]

[project.scripts]
# `uv run dev` — Redis (via docker) + API + arq worker + Vite UI, one command.
dev = "radio_dashboard.dev:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radio_dashboard"]
